--- a/src/views/job.ejs
+++ b/src/views/job.ejs
@@ -28,8 +28,11 @@
     <%- include('parts/page-header', { title: 'Adicionar Novo Job'}) %> 
 
     <div class="container flex animate-up delay-2">
+
       <main>
-        <form id="form-job">
+        <form id="form-job" 
+        action="/job" 
+        method="POST">
           <fieldset>
             <legend>Dados do Job</legend>
             <div class="separator light"></div>
@@ -60,9 +63,9 @@
               </div>
             </div>
           </fieldset>
-    
         </form>
       </main>
+
       <aside class="card">
         <img src="/images/money-gray.svg" alt="Imagem de Dinheiro">
         <p>
