--- a/src/views/index.ejs
+++ b/src/views/index.ejs
@@ -73,20 +73,26 @@
 
   <div class="container">
     <main class="animate-up delay-2">
-      <h1 class="sr-only">Trabalhos</h1>job
+      <h1 class="sr-only">Trabalhos</h1>
 
       <div class="cards">
 
         <% jobs.forEach(job => { %>
 
-          <div class="card <%= job.status %> " data-id="<%= job.id %>">
-            <div class="id column">1</div>
+          <div class="card <%= job.status %>" data-id="<%= job.id %>">
+            <div class="id column"><%= job.id %> </div>
             <div class="name column">
               <%= job.name %>
             </div>
             <div class="deadline column">
               <span>Prazo</span>
-              <p><%= job.remaining %> </p>
+              <p>
+                <% if(job.status === 'progress') { %>
+                  <%= job.remaining %> dias para a entrega
+                <% } else { %>
+                  Prazo encerrado
+                <% } %>  
+              </p>
             </div>
             <div class="amount column">
               <span>Valor</span>
@@ -97,7 +103,10 @@
             </div>
             <div class="actions column flex">
               <p class="sr-only">Ações</p>
-              <a href="/job/edit" class="button white edit" title="Editar Job">
+              <a 
+                href="/job/<%= job.id %> " 
+                class="button white edit" 
+                title="Editar Job">
                 <img src="/images/edit-24.svg" alt="Editar Job" />
               </a>
               <button class="delete button white" title="Excluir Job">
@@ -120,9 +129,10 @@
       <h3>Excluir Job</h3>
       <p>Quer mesmo excluir esse job? <br />
         Ele será apagado para sempre.
-      <p>
+      </p>
       <footer>
         <a class="button gray" href="#">Cancelar</a>
+
         <button class="button red" type="submit" form="delete-job">Excluir Job</button>
       </footer>
     </div>
