--- a/src/views/index.ejs
+++ b/src/views/index.ejs
@@ -33,12 +33,15 @@
         <img id="logo" src="/images/logo.svg" alt="Logo" />
         <span id="notification">
           <img src="/images/alert-octagon.svg" alt="Alerta" />
-          Você tem 2 horas livres no seu dia
+          <% if(freeHours <= 0) { %>
+              Você não tem horas livres no seu dia
+          <% } else { %>
+              Você tem <%= freeHours %> horas livres no seu dia
+          <% } %>
         </span>
         <a href="/profile" id="avatar-profile">
-          <p>Jakeliny <span>Ver perfil</span></p>
-          <img
-            src="https://avatars.githubusercontent.com/u/17316392?s=460&u=6912a91a70bc89745a2079fdcdad3bc3ce370f13&v=4" />
+          <p><%= profile.name %><span>Ver perfil</span></p>
+          <img src="<%= profile.avatar %>" />
         </a>
       </section>
 
@@ -49,15 +52,15 @@
 
         <div class="info">
           <div class="total">
-            <strong>12</strong>
+            <strong><%= statusCount.total %></strong>
             Projetos ao total
           </div>
           <div class="in-progress">
-            <strong>7</strong>
+            <strong><%= statusCount.progress %></strong>
             Em andamento
           </div>
           <div class="finished">
-            <strong>4</strong>
+            <strong><%= statusCount.done %></strong>
             Encerrados
           </div>
         </div>
@@ -80,33 +83,33 @@
         <% jobs.forEach(job => { %>
 
           <div class="card <%= job.status %>" data-id="<%= job.id %>">
-            <div class="id column"><%= job.id %> </div>
+            <div class="id column">
+              <%= job.id %>
+            </div>
             <div class="name column">
               <%= job.name %>
             </div>
             <div class="deadline column">
               <span>Prazo</span>
               <p>
-                <% if(job.status === 'progress') { %>
+                <% if(job.status==='progress' ) { %>
                   <%= job.remaining %> dias para a entrega
-                <% } else { %>
-                  Prazo encerrado
-                <% } %>  
+                    <% } else { %>
+                      Prazo encerrado
+                      <% } %>
               </p>
             </div>
             <div class="amount column">
               <span>Valor</span>
-              <p>R$ <%= job.budget.toFixed(2).replace('.', ',') %> </p>
+              <p>R$ <%= job.budget.toFixed(2).replace('.', ',' ) %>
+              </p>
             </div>
             <div class="status badge column">
-              <%= job.status === 'done' ? 'Encerrado' : 'Em andamento' %> 
+              <%= job.status==='done' ? 'Encerrado' : 'Em andamento' %>
             </div>
             <div class="actions column flex">
               <p class="sr-only">Ações</p>
-              <a 
-                href="/job/<%= job.id %> " 
-                class="button white edit" 
-                title="Editar Job">
+              <a href="/job/<%= job.id %> " class="button white edit" title="Editar Job">
                 <img src="/images/edit-24.svg" alt="Editar Job" />
               </a>
               <button class="delete button white" title="Excluir Job">
@@ -115,7 +118,7 @@
             </div>
           </div>
 
-        <% }); %>
+          <% }); %>
 
       </div>
       <!-- end cards -->
